Try on the new Cloud9 IDE

--- a/elements/score.html
+++ b/elements/score.html
@@ -15,7 +15,7 @@
         (function() {
             'use strict';
             Polymer('smw-score', {
-                source: '/testData/edinburghPolicePipers.json'
+                source: './testData/edinburghPolicePipers.json'
                 //source: ''
             });
         })();
