--- a/elements/scoreHeader.html
+++ b/elements/scoreHeader.html
@@ -40,6 +40,7 @@
                 </div>
             </div>
         </div>
+        <div style="clear: both"></div>
     </template>
     <script>
         (function() {
