--- a/elements/scoreCanvas.html
+++ b/elements/scoreCanvas.html
@@ -1,7 +1,8 @@
 <link rel="import" href="../app/components/polymer/polymer.html" />
 <link rel="import" href="scoreStaff.html" />
-<script src="../app/components/raphael/raphael-min.js"></script>
+<script src="../app/components/raphael/raphael.js"></script>
 <script src="../app/vexflow/build/vexflow/vexflow-debug.js"></script>
+<script src="../js/vexExtend.js"></script>
 <polymer-element name="smw-score-canvas" attributes="data settings width height">
     <template>
         <style>
